<resources>
    <string name="app_name">EvaluacionT1_2</string>
    <string name="btnRegistrarNotaInicio">Registrar Nota</string>
    <string name="btnConsultarNotaInicio">Consultar Nota</string>
    <string name="texto_titulo_registro">Registro de nota</string>
    <string name="texto_btn_alumno">Seleccionar Alumno</string>
    <string name="texto_pista_alumno">Selecciona el alumno</string>
    <string name="texto_pista_asignatura">Selecciona la asignatura</string>
    <string name="texto_btn_asignatura">Seleccionar Asignatura</string>
    <string name="texto_pista_nota">Nota del examen</string>
    <string name="texto_btn_calcular_nota">Calcular Nota</string>
    <string name="texto_btn_guardar_datos">Guardar Datos</string>
    <string name="texto_titulo_seleccion">Selección de Asignatura</string>
    <string name="texto_btn_asignatura_1">PMDM</string>
    <string name="texto_btn_asignatura_6">IACC</string>
    <string name="texto_btn_asignatura_7">IOS</string>
    <string name="texto_btn_asignatura_5">SGE</string>
    <string name="texto_btn_asignatura_4">DI</string>
    <string name="texto_btn_asignatura_3">PSP</string>
    <string name="texto_btn_asignatura_2">AD</string>
    <string name="texto_btn_seleccion_aceptar">Aceptar</string>
    <string name="texto_btn_seleccion_cancelar">Cancelar</string>
    <string name="btn_cancelar_seleccion">Cancelar</string>
    <string name="btn_aceptar_seleccion">Aceptar</string>
    <string name="btn_alumno_22">Cindy Vanessa Taboada Guerra</string>
    <string name="btn_alumno_21">Angel Santana Aguilera</string>
    <string name="btn_alumno_20">Roberto Ruiz</string>
    <string name="btn_alumno_19">Alejandro Ramirez Gómez</string>
    <string name="btn_alumno_18">Lucas René Oliveira Urrutia</string>
    <string name="btn_alumno_17">Adrian Ignacio Ocaña de Frutos</string>
    <string name="btn_alumno_16">Alejandro Martínez Bravo</string>
    <string name="btn_alumno_15">Clara Nuevo Mota</string>
    <string name="btn_alumno_14">Guillermo Martín Muñoz</string>
    <string name="btn_alumno_13">Oscar Martín García</string>
    <string name="btn_alumno_12">Camilo Armando Maita Bracamonte</string>
    <string name="btn_alumno_11">Axel León Arroyo</string>
    <string name="btn_alumno_10">Carlos Hernández Borja</string>
    <string name="btn_alumno_9">Mario Gómez Pérez</string>
    <string name="btn_alumno_8">Alvaro García Guimaraens</string>
    <string name="btn_alumno_7">Bernardino Font García</string>
    <string name="btn_alumno_6">Ignacio Fernández Periáñez</string>
    <string name="btn_alumno_5">Ana Coral Fernández Arteta</string>
    <string name="btn_alumno_4">Bony Pablo Diez Ateca</string>
    <string name="btn_alumno_3">Nander Antonio Cueva Machuca</string>
    <string name="btn_alumno_2">Miguel Cañizares Chichon</string>
    <string name="btn_alumno_1">Víctor Anguita Martínez de Velasco</string>
    <string name="txt_titulo_seleccion_alumno">Selección de Alumno</string>
    <string name="txt_titulo_consultar_notas">Consulta de Notas por Alumno</string>
    <string name="hint_et_consultar_notas">Nombre del Alumno</string>
    <string name="btn_seleccionar_alumno_consulta_notas">Seleccionar Alumno</string>
    <string name="btn_limpiar_datos_consulta">Limpiar Datos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_nota_examen">La nota de examen debe estar entre 0 y 10</string>
    <string name="toast_nota_actividades">La nota de actividades debe estar entre 0 y 10</string>
    <string name="toast_registro_datos_alumno">Los campos de alumno y asignatura deben estar rellenados</string>
    <string name="texto_datos_actualizados">Datos Actualizados</string>
    <string name="toast_registro_validacion_nota_examen">Debe rellenar el campo de nota de examen</string>
    <string name="toast_registro_validacion_nota_actividades">Debe rellenar el campo de nota de actividades</string>
    <string name="toast_registro_notas_vacias">Los campos de las notas deben estar rellenados</string>
    <string name="texto_pista_nota_actividades">Nota de actividades</string>
    <string name="tv_consultanotas_error_vacio">No hay registro de las notas del alumno seleccionado</string>
</resources>