<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".SeleccionAsignatura">

    <TextView
        android:id="@+id/tvTituloSeleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo_seleccion"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnAsignatura1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/texto_btn_asignatura_1"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloSeleccion" />

    <Button
        android:id="@+id/btnAsignatura2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/texto_btn_asignatura_2"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAsignatura1" />

    <Button
        android:id="@+id/btnAsignatura3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/texto_btn_asignatura_3"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAsignatura2" />

    <Button
        android:id="@+id/btnAsignatura4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/texto_btn_asignatura_4"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAsignatura3" />

    <Button
        android:id="@+id/btnAsignatura5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/texto_btn_asignatura_5"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAsignatura4" />

    <Button
        android:id="@+id/btnAsignatura6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/texto_btn_asignatura_6"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAsignatura5" />

    <Button
        android:id="@+id/btnAsignatura7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/texto_btn_asignatura_7"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAsignatura6" />

    <EditText
        android:id="@+id/etCodigoAsignatura"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintBottom_toTopOf="@id/btnSeleccionAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAsignatura7"
        app:layout_constraintVertical_bias="0.87" />

    <Button
        android:id="@+id/btnSeleccionAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_btn_seleccion_aceptar"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSeleccionCancelar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnSeleccionCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_btn_seleccion_cancelar"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toEndOf="@id/btnSeleccionAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
