<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".RegistroNota">

    <TextView
        android:id="@+id/tvTituloRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo_registro"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloRegistro">

        <EditText
            android:id="@+id/etAlumno"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:enabled="false"
            android:hint="@string/texto_pista_alumno"
            android:layout_weight="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnSeleccionarAlumno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloRegistro" />

        <Button
            android:id="@+id/btnSeleccionarAlumno"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_btn_alumno"
            android:layout_weight="0"
            android:onClick="onSeleccionarAlumnoClick"
            android:backgroundTint="@color/red"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/etAlumno"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloRegistro"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAsignatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llAlumno">

        <EditText
            android:id="@+id/etAsignatura"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/texto_pista_asignatura"
            android:layout_weight="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnSeleccionarAlumno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAlumno" />

        <Button
            android:id="@+id/btnSeleccionarAsignatura"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_btn_asignatura"
            android:layout_weight="0"
            android:layout_marginStart="8dp"
            android:onClick="onSeleccionarAsignaturaClick"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintStart_toEndOf="@id/etAlumno"
            app:layout_constraintTop_toBottomOf="@+id/btnSeleccionarAlumno"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llAsignatura">

        <EditText
            android:id="@+id/etNotaExamen"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/texto_pista_nota"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/etAsignatura"
            app:layout_constraintEnd_toStartOf="@+id/etNotaActividades"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etNotaActividades"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/texto_pista_nota_actividades"
            android:layout_marginStart="17dp"
            android:layout_weight="0"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/etAsignatura"
            app:layout_constraintStart_toEndOf="@+id/etNotaExamen"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llNotas">

        <Button
            android:id="@+id/btnCalcularNota"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_btn_calcular_nota"
            android:onClick="onCalcularNotaClick"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toStartOf="@id/etResultado"
            app:layout_constraintTop_toBottomOf="@+id/etNotaExamen"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etResultado"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:enabled="false"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCalcularNota"
            app:layout_constraintTop_toBottomOf="@+id/etNotaActividades" />

    </LinearLayout>



    <Button
        android:id="@+id/btnGuardarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_btn_guardar_datos"
        android:backgroundTint="@color/red"
        android:onClick="onGuardarDatosClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpiarDatos"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnLimpiarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_limpiar_datos_consulta"
        android:onClick="onLimpiarClick"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGuardarDatos"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>